--- a/css/other_pages.css
+++ b/css/other_pages.css
@@ -52,3 +52,40 @@ nav h3 {
     font-family: var(--serif);
     font-size: 30px;
 }
+#popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-content: center;
+}
+#popup-img {
+    align-self: center;
+}
+#close {
+    padding: 20px;
+    font-family: var(--sans-serif);
+    font-size: xx-large;
+    position: absolute;
+    top:0;
+    left:0;
+    color: gray;
+}
+#close:hover {
+    color: white;
+    cursor: pointer;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+  
+}
